proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/times_equals.py
def foo(x):
	while (x < 64):
		x *= 2
	return x

foo(2)